fix contrast ratio

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -4,7 +4,7 @@
     --light-green: #c2c5aa;
     --pale-white: #faf5e4;
     --warm-brown: #b19c91;
-    --light-brown: #dfcfc1;
+    --light-brown: #e7dad0;
     --light-yellow: #e0a458;
 }
 
